fix: AI response